-updates for rev1

--- a/Benchmark_Study/protein_affinity_prediction/Affinity_Prediction.ipynb
+++ b/Benchmark_Study/protein_affinity_prediction/Affinity_Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,131 +64,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Protein1</th>\n",
-       "      <th>Protein2</th>\n",
-       "      <th>Affinity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1A22_A_wt</td>\n",
-       "      <td>1A22_B_CB308A_</td>\n",
-       "      <td>-12.293700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1A22_A_wt</td>\n",
-       "      <td>1A22_B_CB322A_</td>\n",
-       "      <td>-12.293700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1A22_A_wt</td>\n",
-       "      <td>1A22_B_DB319A_EB320A_KB321A_</td>\n",
-       "      <td>-12.604200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1A22_A_wt</td>\n",
-       "      <td>1A22_B_DB326A_</td>\n",
-       "      <td>-11.680933</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1A22_A_wt</td>\n",
-       "      <td>1A22_B_DB332A_</td>\n",
-       "      <td>-11.728800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2945</th>\n",
-       "      <td>4CPA_A_wt</td>\n",
-       "      <td>4CPA_I_VI38I_</td>\n",
-       "      <td>-11.832000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2946</th>\n",
-       "      <td>4CPA_A_wt</td>\n",
-       "      <td>4CPA_I_VI38L_</td>\n",
-       "      <td>-10.752500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2947</th>\n",
-       "      <td>4CPA_A_wt</td>\n",
-       "      <td>4CPA_I_wt</td>\n",
-       "      <td>-12.031300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2948</th>\n",
-       "      <td>4CPA_A_wt</td>\n",
-       "      <td>4CPA_I_YI37F_</td>\n",
-       "      <td>-12.031300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2949</th>\n",
-       "      <td>4CPA_A_wt</td>\n",
-       "      <td>4CPA_I_YI37G_</td>\n",
-       "      <td>-11.529500</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2950 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       Protein1                      Protein2   Affinity\n",
-       "0     1A22_A_wt                1A22_B_CB308A_ -12.293700\n",
-       "1     1A22_A_wt                1A22_B_CB322A_ -12.293700\n",
-       "2     1A22_A_wt  1A22_B_DB319A_EB320A_KB321A_ -12.604200\n",
-       "3     1A22_A_wt                1A22_B_DB326A_ -11.680933\n",
-       "4     1A22_A_wt                1A22_B_DB332A_ -11.728800\n",
-       "...         ...                           ...        ...\n",
-       "2945  4CPA_A_wt                 4CPA_I_VI38I_ -11.832000\n",
-       "2946  4CPA_A_wt                 4CPA_I_VI38L_ -10.752500\n",
-       "2947  4CPA_A_wt                     4CPA_I_wt -12.031300\n",
-       "2948  4CPA_A_wt                 4CPA_I_YI37F_ -12.031300\n",
-       "2949  4CPA_A_wt                 4CPA_I_YI37G_ -11.529500\n",
-       "\n",
-       "[2950 rows x 3 columns]"
+       "764"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ppi_affinity_df"
+    "len(set(list(ppi_affinity_df['Protein1'])))"
    ]
   },
   {
