--- a/paper_reproduction_scripts/semantic_similarity_inference/Sparsify_Protein_Similarities.ipynb
+++ b/paper_reproduction_scripts/semantic_similarity_inference/Sparsify_Protein_Similarities.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "247009"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -197,7 +197,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 247/247 [00:09<00:00, 24.80it/s]\n"
+      "100%|██████████| 247/247 [00:10<00:00, 23.70it/s]\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -220,7 +220,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,12 +278,14 @@
     "    for ax in axs.flat:\n",
     "        ax.set_axisbelow(True)\n",
     "        ax.grid(True,linewidth=0.5,ls='--')\n",
-    "        ax.get_yaxis().set_label_coords(-0.35,0.5)"
+    "        ax.get_yaxis().set_label_coords(-0.35,0.5)\n",
+    "    fig.savefig\\\n",
+    "    ('/media/DATA/serbulent/DATA/Thesis/ReviewPaper/results/revision-1/figures/histogram_for_multiple_similarites.eps', dpi=600)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -328,9 +330,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "247"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(filtered_indexes)"
    ]
@@ -344,9 +357,266 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 462),\n",
+       " (300, 491),\n",
+       " (326, 491),\n",
+       " (348, 491),\n",
+       " (227, 300),\n",
+       " (300, 460),\n",
+       " (131, 491),\n",
+       " (26, 491),\n",
+       " (163, 220),\n",
+       " (122, 300),\n",
+       " (64, 220),\n",
+       " (18, 220),\n",
+       " (8, 220),\n",
+       " (8, 236),\n",
+       " (12, 300),\n",
+       " (108, 326),\n",
+       " (4, 491),\n",
+       " (11, 491),\n",
+       " (20, 236),\n",
+       " (8, 491),\n",
+       " (3, 491),\n",
+       " (7, 491),\n",
+       " (61, 326),\n",
+       " (10, 374),\n",
+       " (76, 491),\n",
+       " (44, 300),\n",
+       " (6, 32),\n",
+       " (35, 491),\n",
+       " (13, 220),\n",
+       " (20, 32),\n",
+       " (0, 224),\n",
+       " (29, 32),\n",
+       " (0, 474),\n",
+       " (0, 32),\n",
+       " (6, 300),\n",
+       " (3, 348),\n",
+       " (15, 224),\n",
+       " (0, 422),\n",
+       " (19, 176),\n",
+       " (0, 290),\n",
+       " (0, 279),\n",
+       " (0, 19),\n",
+       " (0, 444),\n",
+       " (0, 313),\n",
+       " (0, 437),\n",
+       " (0, 419),\n",
+       " (0, 308),\n",
+       " (0, 138),\n",
+       " (0, 286),\n",
+       " (0, 321),\n",
+       " (7, 460),\n",
+       " (4, 314),\n",
+       " (0, 341),\n",
+       " (4, 450),\n",
+       " (4, 325),\n",
+       " (0, 36),\n",
+       " (0, 183),\n",
+       " (4, 122),\n",
+       " (4, 423),\n",
+       " (4, 250),\n",
+       " (1, 199),\n",
+       " (2, 452),\n",
+       " (2, 393),\n",
+       " (0, 487),\n",
+       " (0, 185),\n",
+       " (0, 493),\n",
+       " (2, 273),\n",
+       " (0, 93),\n",
+       " (3, 327),\n",
+       " (0, 337),\n",
+       " (0, 82),\n",
+       " (0, 259),\n",
+       " (0, 354),\n",
+       " (1, 325),\n",
+       " (0, 184),\n",
+       " (1, 413),\n",
+       " (1, 209),\n",
+       " (1, 155),\n",
+       " (0, 156),\n",
+       " (0, 125),\n",
+       " (2, 243),\n",
+       " (0, 228),\n",
+       " (1, 430),\n",
+       " (3, 200),\n",
+       " (1, 259),\n",
+       " (0, 401),\n",
+       " (1, 62),\n",
+       " (0, 55),\n",
+       " (0, 477),\n",
+       " (2, 153),\n",
+       " (2, 41),\n",
+       " (0, 51),\n",
+       " (1, 157),\n",
+       " (1, 290),\n",
+       " (0, 496),\n",
+       " (0, 30),\n",
+       " (1, 109),\n",
+       " (0, 349),\n",
+       " (0, 10),\n",
+       " (0, 189),\n",
+       " (0, 18),\n",
+       " (1, 304),\n",
+       " (0, 218),\n",
+       " (0, 154),\n",
+       " (0, 111),\n",
+       " (0, 389),\n",
+       " (0, 240),\n",
+       " (0, 299),\n",
+       " (0, 100),\n",
+       " (0, 404),\n",
+       " (0, 126),\n",
+       " (0, 377),\n",
+       " (0, 208),\n",
+       " (0, 268),\n",
+       " (2, 439),\n",
+       " (0, 5),\n",
+       " (1, 258),\n",
+       " (2, 126),\n",
+       " (1, 25),\n",
+       " (0, 361),\n",
+       " (1, 124),\n",
+       " (3, 41),\n",
+       " (0, 147),\n",
+       " (0, 163),\n",
+       " (0, 216),\n",
+       " (3, 134),\n",
+       " (1, 142),\n",
+       " (1, 307),\n",
+       " (0, 213),\n",
+       " (2, 457),\n",
+       " (1, 57),\n",
+       " (1, 340),\n",
+       " (0, 136),\n",
+       " (1, 282),\n",
+       " (3, 433),\n",
+       " (2, 108),\n",
+       " (0, 40),\n",
+       " (1, 59),\n",
+       " (3, 5),\n",
+       " (2, 95),\n",
+       " (1, 198),\n",
+       " (1, 177),\n",
+       " (0, 98),\n",
+       " (1, 40),\n",
+       " (0, 271),\n",
+       " (0, 223),\n",
+       " (2, 428),\n",
+       " (2, 198),\n",
+       " (0, 15),\n",
+       " (0, 117),\n",
+       " (1, 114),\n",
+       " (2, 208),\n",
+       " (0, 350),\n",
+       " (2, 58),\n",
+       " (0, 20),\n",
+       " (1, 190),\n",
+       " (2, 293),\n",
+       " (1, 90),\n",
+       " (5, 406),\n",
+       " (0, 80),\n",
+       " (1, 272),\n",
+       " (2, 141),\n",
+       " (0, 74),\n",
+       " (2, 43),\n",
+       " (2, 132),\n",
+       " (1, 56),\n",
+       " (1, 16),\n",
+       " (2, 213),\n",
+       " (7, 465),\n",
+       " (1, 221),\n",
+       " (2, 52),\n",
+       " (5, 232),\n",
+       " (2, 97),\n",
+       " (7, 200),\n",
+       " (1, 181),\n",
+       " (16, 75),\n",
+       " (27, 43),\n",
+       " (1, 311),\n",
+       " (31, 472),\n",
+       " (1, 429),\n",
+       " (0, 29),\n",
+       " (5, 38),\n",
+       " (1, 5),\n",
+       " (5, 7),\n",
+       " (7, 152),\n",
+       " (1, 22),\n",
+       " (7, 436),\n",
+       " (22, 200),\n",
+       " (7, 421),\n",
+       " (7, 232),\n",
+       " (22, 222),\n",
+       " (4, 448),\n",
+       " (18, 189),\n",
+       " (14, 214),\n",
+       " (22, 141),\n",
+       " (18, 207),\n",
+       " (43, 340),\n",
+       " (1, 75),\n",
+       " (22, 315),\n",
+       " (52, 266),\n",
+       " (38, 388),\n",
+       " (22, 121),\n",
+       " (38, 375),\n",
+       " (7, 128),\n",
+       " (38, 56),\n",
+       " (31, 389),\n",
+       " (11, 144),\n",
+       " (38, 266),\n",
+       " (121, 352),\n",
+       " (5, 18),\n",
+       " (38, 97),\n",
+       " (17, 35),\n",
+       " (75, 476),\n",
+       " (22, 317),\n",
+       " (52, 121),\n",
+       " (173, 476),\n",
+       " (58, 340),\n",
+       " (97, 315),\n",
+       " (127, 467),\n",
+       " (97, 310),\n",
+       " (14, 73),\n",
+       " (151, 431),\n",
+       " (167, 357),\n",
+       " (121, 388),\n",
+       " (115, 233),\n",
+       " (340, 404),\n",
+       " (132, 233),\n",
+       " (357, 432),\n",
+       " (389, 496),\n",
+       " (132, 315),\n",
+       " (265, 389),\n",
+       " (340, 352),\n",
+       " (315, 377),\n",
+       " (375, 478),\n",
+       " (163, 343),\n",
+       " (357, 496),\n",
+       " (151, 396),\n",
+       " (431, 481),\n",
+       " (260, 307),\n",
+       " (267, 481),\n",
+       " (340, 467),\n",
+       " (233, 315),\n",
+       " (0, 0),\n",
+       " (357, 389),\n",
+       " (141, 194),\n",
+       " (233, 377),\n",
+       " (352, 467)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "filtered_indexes_zip = zip(*np.unravel_index(filtered_indexes, human_proteinSimilarityMatrix.shape))\n",
     "\n",
@@ -359,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
